[metadata]
name = aiida-plugin
version = attr: myst_parser.__version__
description = An aiida plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidateam/aiida-plugin
author = Chris Sewell
author_email = aiidateam@htomail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    aiida

[options]
packages = find:
install_requires =
    aiida-core ~= 2.0
python_requires = >=3.6
include_package_data = True
zip_safe = True

[options.entry_points]
aiida.calculations =
    plugin.add = aiida.calculations.arithmetic.add:ArithmeticAddCalculation

[options.extras_require]
dev =
    pytest
